# testing

./: .gitignore  crud.py  db.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_04_1401-a18a18fdcb06_create_products_table.py  2025_03_04_1414-19c50b5ee83d_create_users_table.py  2025_03_04_1423-5cd3498cc761_create_posts_table.py  2025_03_04_1507-c55fc5ec20d8_create_profile_table.py  2025_03_04_2201-5b60e138d1b7_create_orders_table.py  2025_03_04_2223-0e4e9c5306cd_create_order_product_association_table.py  2025_03_05_0000-253b7d25c7b1_add_count_column_to_order_product_.py  2025_03_05_0039-73a77bc253c6_add_unit_price_column_to_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/demo_jwt_auth/: crud.py  demo_jwt_auth.py  dependecies.py  helpers.py  schemas.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: settings.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
demo_auth/: views.py
users/: __init__.py  crud.py  schemas.py  views.py
